# ai_integration

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
frontend/: index.html
src/ai_integration/: analytics.py  api.py  autoresponder.py  bot.py  classifier.py  config.py  main.py  models.py  router.py
tests/: test_autoresponder.py  test_classifier.py  test_router.py
